fix: add overflow

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   padding: 0;
   height: 100vh;
   box-sizing: border-box;
+  overflow: hidden;
 }
 
 h1.heading {
